# electronics-shop-project

./: pyproject.toml
homework-1/: main.py
src/: item.py  keyboard.py  phone.py
tests/: test_item.py  test_keyboard.py  test_phone.py
