[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
accessify = "^0.3.1"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
